--- a/Poisson_sampler.Rmd
+++ b/Poisson_sampler.Rmd
@@ -118,8 +118,24 @@ update_R1 = function(n.response.nodes = integer(), lp = double(1), t1 = double(1
                       }
 ```
 ```{r R2_func}
-update_R2 = function(response.nodes = integer(1), n.response.nodes = integer(), n.zero.response.nodes = integer(), lp = double(1), t2 = double(1), vy = double(2), my = double(2), vy2 = double(2), c2 = double(2)){
-                        
+update_R2 = function(response.nodes = integer(1), n.response.nodes = integer(), n.zero.response.nodes = integer(), lp = double(1), t2 = double(1), vy = double(2), my = double(2), wy = double(2)){
+                        vy2 <- vy
+                        for(i in 1:10){
+                          vy2[vy2[,i]==0,i]<-1
+                        }
+                        lwy <- wy
+                        for(i in 1:10){
+                          lwy[lwy[,i]==0,i] <- 1
+                          lwy[lwy[,i]<0,i] <- 1
+                          lwy[,i] <- log(lwy[,i])
+                        }
+                        lvy <- vy
+                        for(i in 1:10){
+                          lvy[lvy[,i]==0,i] <- 1
+                          lvy[lvy[,i]<0,i] <- 1
+                          lvy[,i] <- log(lvy[,i])
+                        }
+                        c2 <- (lwy - 0.5*lvy) 
                         minlogt2minlp <- matrix(-log(t2) - lp[response.nodes>0],ncol=10,nrow=n.response.nodes-n.zero.response.nodes)
                         
                         kill <- matrix(vy > 0, n.response.nodes - n.zero.response.nodes, 10)
@@ -174,28 +190,93 @@ Comparing again to the **pogit** package:
 # first I compute a constant that both functions need
 c1 <- t(matrix(log(mcomp$w[1, ]) - 0.5*log(mcomp$v[1, ]), nrow = 10, ncol = N))
 # calculate my Rs
-# extra input for my R2
-lwy <- log(compmix.pois$wy)
-lwy[compmix.pois$wy==0] <- 0
-lvy <- log(compmix.pois$vy)
-lvy[compmix.pois$vy==0] <- 0
-vy2 <- compmix.pois$vy
-vy2[vy2==0] <- 1
-c2 <- (lwy - 0.5*lvy) 
-    
 set.seed(1);my_R1 <- update_R1(n.response.nodes = N, lp = eta, t1 = pogit_tau$t1, mcompm = mcomp$m, mcompv = mcomp$v, c1 = c1)
-set.seed(1);my_R2 <- update_R2(response.nodes = y, n.response.nodes = N, n.zero.response.nodes = sum(y==0), lp = eta, t2 = pogit_tau$t2, vy = compmix.pois$vy, my = compmix.pois$my, vy2 = vy2, c2 =  c2)
+set.seed(1);my_R2 <- update_R2(response.nodes = y, n.response.nodes = N, n.zero.response.nodes = sum(y==0), lp = eta, t2 = pogit_tau$t2, vy = compmix.pois$vy, my = compmix.pois$my, wy = compmix.pois$wy)
 # pogit Rs
 cm1 <- list(comp = list(m = mcomp$m[1, ], v = mcomp$v[1, ], w = mcomp$w[1, ]), c1 = c1) # pogit requires a list of arguments
 set.seed(1);pogit_R <- pogit:::iams2_poisson(n = N, tau1 = pogit_tau$t1, tau2 = pogit_tau$t2, logMu = eta, logMugz = eta[y>0], cm1 = cm1, compmix = compmix.pois)
 
 sum(pogit_R[1:N]-my_R1) # should be zero
-sum(pogit_R[-c(1:N)]-my_R2) # should be zero but something is weird with the seed; i have doubly verified that this output is correct
+sum(pogit_R[-c(1:N)]-my_R2) # should be zero 
 ```
+
+the output for both sums should be zero, but for $\boldsymbol{R}_2$ is not. I suspect this is because the seed for *pogit_R* is not set correctøy, since the function includes two random number generators and mine only one. However, I have verified the calculation for $\boldsymbol{R}_2$ and it is correct.
 
 ### Posterior moments
 
-All that remains is to calculate the posterior moments and generate a sample from the posterior. Unfortunately, this is harder to reproduce with the **pogit** package because there is no function that returns those quantiites.
+All that remains is to calculate the posterior moments and generate a sample from the posterior. Unfortunately, this is harder to reproduce with the **pogit** package because there is no function that returns those quantities. In an attempt to verify my output anyway, I have written a function that outputs the posterior mean, covariance, and a proposal, based on the code in **select_poisson.R**:
+
+```{r pogit_post_calc}
+pogit_post_calc <- function(X, compmix, tau1, tau2, R, cm1){
+X <- as.matrix(X)
+n <- nrow(X)
+# mixture component means and variances
+m1 <- cm1$comp$m[R[1:n]]
+m2 <- compmix.pois$my[cbind(seq_len(compmix.pois$ngz), R[-(1:n)])]
+mR <- as.matrix(c(m1,m2), (n + compmix.pois$ngz))
+v1 <- cm1$comp$v[R[1:n]]
+v2 <- compmix.pois$vy[cbind(seq_len(compmix.pois$ngz), R[-(1:n)])]
+invSig <- 1/sqrt(c(v1,v2))
+
+# stacking and standardizing
+tauS <- c(tau1, tau2)
+xS <- rbind(X, X[compmix.pois$igz, , drop = FALSE])
+yS <- (-log(tauS) - mR)*invSig
+
+Xall <- xS*kronecker(matrix(1, 1, ncol(X)), invSig) # X times inv. sd.dev of mixtures
+
+# inv. prior variance
+invA0 <- diag(ncol(Xall))
+a0 = rep(0,ncol(Xall)) # prior mean
+
+AP    <- solve(invA0 + t(Xall)%*%Xall)  # A = (A0^-1 + (Z*)'Sigma^-1 Z*)
+aP    <- AP%*%(invA0%*%a0 + t(Xall)%*%yS) # a = A(A0^-1*a0 + (Z*)'Sigma^-1*y
+zetaP <- t(chol(AP))%*%matrix(rnorm(ncol(Xall)), ncol(Xall), 1) + aP 
+return(list(postMean = aP, postCov = AP, proposal = zetaP))
+}
+```
+
+and my function, only for testing purposes here:
+
+```{r my_post_calc}
+my_post_calc <- function(X, n.response.nodes, n.zero.response.nodes, response.nodes, R1, R2, tau, mcompv, mcompm, my, vy){
+    X <- as.matrix(X)
+    n.param.nodes <- ncol(X)
+    m1 <- mcompm[1,R1]
+    m2 <- numeric(n.response.nodes-n.zero.response.nodes)
+    for(i in 1:(n.response.nodes-n.zero.response.nodes)){
+      m2[i] <- my[i,R2[i]]
+    }
+    # second: mixture component variances
+    v1 <- mcompv[1,R1]
+    v2 <- numeric(n.response.nodes-n.zero.response.nodes)
+    for(i in 1:(n.response.nodes-n.zero.response.nodes)){
+      v2[i] <- vy[i,R2[i]]
+    }
+    invSigS = numeric(n.response.nodes)
+    ys1 = (-log(tau[,1])-m1)/sqrt(v1) # this is also "AuxMixPoisson:value()" in JAGS
+    ys2 = (-log(tau[response.nodes>0,2])-m2)/sqrt(v2)
+    invSigS = 1/v1
+    invSigS[response.nodes>0] = invSigS[response.nodes>0]+1/v2
+    # prior parameters
+    bPriorCov = diag(n.param.nodes)
+    bPriorMean = rep(0, n.param.nodes)
+    # posterior parameters
+    bPostCov = solve(solve(bPriorCov, diag(n.param.nodes)) + t(X)%*%diag(invSigS)%*%X ,diag(2))
+    bPostMean = bPostCov%*%(solve(bPriorCov,diag(n.param.nodes))%*%bPriorMean+ (t(X)%*%diag(1/sqrt(v1))%*%ys1+t(X[response.nodes>0,])%*%diag(1/sqrt(v2))%*%ys2)) # see eq (8) Fruhwirth-Schnatter and Wagner 2006 or L109-111 from pogit::select_poisson.Rs
+    # a sample from the posterior
+    proposal <- rmnorm_chol(1, mean = c(bPostMean), cholesky = chol(bPostCov), prec_param = 0)
+return(list(postMean = bPostMean, postCov = bPostCov, proposal = proposal))
+}
+```
+
+test it:
+```{r test_post_calc}
+set.seed(1);my_post <- my_post_calc(cbind(1,x), N, sum(y==0), y, pogit_R[1:N], pogit_R[-c(1:N)], my_tau, mcomp$v, mcomp$m, compmix.pois$my, compmix.pois$vy)
+set.seed(1);pogit_post <- pogit_post_calc(cbind(1,x),compmix,pogit_tau$t1, pogit_tau$t2, pogit_R, cm1)
+sum(my_post$postMean-pogit_post$postMean)
+sum(my_post$postCov-pogit_post$postCov)
+```
 
 ### Putting it all together in NIMBLE
 
@@ -249,9 +330,10 @@ sampler_glm_pois <- nimbleFunction(
       my[response.nodes[response.nodes>0] <= 3e4,1:dim(mcomp$m)[2]] = mcomp$m[response.nodes[(response.nodes>0) & (response.nodes <= 3e4)],]
       vy[response.nodes[response.nodes>0] <= 3e4,1:dim(mcomp$v)[2]] = mcomp$v[response.nodes[(response.nodes>0) & (response.nodes <= 3e4)],]
       wy[response.nodes[response.nodes>0] <= 3e4,1:dim(mcomp$w)[2]] = mcomp$w[response.nodes[(response.nodes>0) & (response.nodes <= 3e4)],]
+      # this comes from "compute_mixture.R"
       for(i in response.nodes[response.nodes>3e4]){
-        my[response.nodes[response.nodes>0]==i,1] <- sqrt(trigamma(i))*m - digamma(i)
-        vy[response.nodes[response.nodes>0]==i,1] <- trigamma(i)*v
+        my[response.nodes[response.nodes>0]==i,1] <- -digamma(i)
+        vy[response.nodes[response.nodes>0]==i,1] <- trigamma(i)
         wy[response.nodes[response.nodes>0]==i,1] <- 1 
       }
     }
@@ -259,17 +341,11 @@ sampler_glm_pois <- nimbleFunction(
     my[is.na(my)] <- 0
     wy[is.na(wy)] <- 0
     # for use in step 3
-    lwy <- log(wy)
-    lwy[wy==0] <- 0
-    lvy <- log(vy)
-    lvy[vy==0] <- 0
     c1 <- t(matrix(log(mcompw[1, ]) - 0.5*log(mcompv[1, ]), nrow = 10, ncol = n.response.nodes)) # not sure what this is yet
     
-    vy2 <- vy
-    vy2[vy2==0] <- 1
-    c2 <- (lwy - 0.5*lvy) 
-    
     calcNodes <- model$getDependencies(target)
+    model$simulate()
+    model$calculate(calcNodes)
     targetAsScalar <- model$expandNodeNames(target, returnScalarComponents = TRUE)
   },
   
@@ -278,25 +354,26 @@ sampler_glm_pois <- nimbleFunction(
     # this part is covered in "select_poisson.R"
     if(!any_na(R1)){ # I don't update parameters on the first iteration as to generate sensible "warm" start for R1,R2,t1,t2
     # first mixture component means
-    m1 <- mcompm[R1,1]
+    m1 <- mcompm[1,R1]
     m2 <- numeric(n.response.nodes-n.zero.response.nodes)
     for(i in 1:(n.response.nodes-n.zero.response.nodes)){
       m2[i] <- my[i,R2[i]]
     }
     # second: mixture component variances
-    v1 <- mcompv[R1,1]
+    v1 <- mcompv[1,R1]
     v2 <- numeric(n.response.nodes-n.zero.response.nodes)
     for(i in 1:(n.response.nodes-n.zero.response.nodes)){
       v2[i] <- vy[i,R2[i]]
     }
     invSigS = numeric(n.response.nodes)
-    ys1 = (-log(tau[,1])-m1)/v1 # this is also "AuxMixPoisson:value()" in JAGS
-    ys2 = (-log(tau[response.nodes>0,2])-m2)/v2
+    ys1 = (-log(tau[,1])-m1)/sqrt(v1) # this is also "AuxMixPoisson:value()" in JAGS
+    ys2 = (-log(tau[response.nodes>0,2])-m2)/sqrt(v2)
     invSigS = 1/v1
     invSigS[response.nodes>0] = invSigS[response.nodes>0]+1/v2
+    v1mat = matrix()
     # posterior parameters
     bPostCov = solve(solve(bPriorCov, diag(n.param.nodes)) + t(X)%*%diag(invSigS)%*%X ,diag(2))
-    bPostMean = bPostCov%*%(solve(bPriorCov,diag(n.param.nodes))%*%bPriorMean+ (t(X)%*%ys1+t(X[response.nodes>0,])%*%ys2)) # see eq (8) Fruhwirth-Schnatter and Wagner 2006 or L109-111 from pogit::select_poisson.Rs
+    bPostMean = bPostCov%*%(solve(bPriorCov,diag(n.param.nodes))%*%bPriorMean+ t(X)%*%diag(1/sqrt(v1))%*%ys1+t(X[response.nodes>0,])%*%diag(1/sqrt(v2))%*%ys2) # see eq (8) Fruhwirth-Schnatter and Wagner 2006 or L109-111 from pogit::select_poisson.Rs
     # a sample from the posterior
     proposal <- rmnorm_chol(1, mean = c(bPostMean), cholesky = chol(bPostCov), prec_param = 0)
     values(model, targetAsScalar) <<-  proposal
@@ -319,7 +396,7 @@ sampler_glm_pois <- nimbleFunction(
     # Rmix are normal mixture approximations to Poissons
     
     update_R1(n.response.nodes, lp, t1, mcompm, mcompv, c1)
-    update_R2(response.nodes, n.response.nodes, n.zero.response.nodes, lp, t2, vy, my, vy2, c2)
+    update_R2(response.nodes, n.response.nodes, n.zero.response.nodes, lp, t2, vy, my, wy)
     # keep the model and mvSaved objects consistent
     copy(from = model, to = mvSaved, row = 1, 
          nodes = target, logProb = TRUE)
@@ -377,13 +454,32 @@ sampler_glm_pois <- nimbleFunction(
                           R1[i] <<- 11-sum(R1.temp[i,])
                         }
                       },
-                    update_R2 = function(response.nodes = integer(1), n.response.nodes = integer(), n.zero.response.nodes = integer(), lp = double(1), t2 = double(1), vy = double(2), my = double(2), vy2 = double(2), 
-                                         c2 = double(2)){
+                    update_R2 = function(response.nodes = integer(1), n.response.nodes = integer(), n.zero.response.nodes = integer(), lp = double(1), t2 = double(1), vy = double(2), my = double(2), wy = double(2)){
+                      # this function only works if l380-384 are here instead of in "setup" for some reason
+                      # otherwise it returns NaN..
+                        vy2 <- vy
+                        for(i in 1:10){
+                          vy2[vy2[,i]==0,i]<-1
+                        }
+                        lwy <- wy
+                        for(i in 1:10){
+                          lwy[lwy[,i]==0,i] <- 1
+                          lwy[lwy[,i]<0,i] <- 1
+                          lwy[,i] <- log(lwy[,i])
+                        }
+                        lvy <- vy
+                        for(i in 1:10){
+                          lvy[lvy[,i]==0,i] <- 1
+                          lvy[lvy[,i]<0,i] <- 1
+                          lvy[,i] <- log(lvy[,i])
+                        }
+                        c2 <- (lwy - 0.5*lvy)
                         
                         minlogt2minlp <- matrix(-log(t2) - lp[response.nodes>0],ncol=10,nrow=n.response.nodes-n.zero.response.nodes)
                         
                         kill <- matrix(vy > 0, n.response.nodes - n.zero.response.nodes, 10)
                         xx     <- minlogt2minlp*kill
+                        
                         rgmx   <- c2 - 0.5*(xx - my)^2/vy2
                         for(i in 1:10){ #ncol r gm
                           rgmx[rgmx[,i]==0,i] <- -Inf
@@ -455,6 +551,7 @@ dat <- list(X=cbind(1,x),  # predictors
 const <- list(
                 N=N,  # sample size
                 k =ncol(dat$X)) # number of covariates,
+# construct model object
 model <- nimbleModel(pois.glm, const, dat, inits = list(beta = c(1,1)))
 mod <- nimble::compileNimble(model)
 ```
@@ -462,11 +559,11 @@ mod <- nimble::compileNimble(model)
 and add and run it for a few iterations to see that we get something sensible:
 
 ```{r run_mcmc}
-nimbleMCMCconf <- configureMCMC(mod, monitors = c("beta[1]","beta[2]"))
+nimbleMCMCconf <- configureMCMC(mod, monitors = c("beta"), print = FALSE)
 nimbleMCMCconf$removeSampler("beta")
-nimbleMCMCconf$addSampler("beta",type="sampler_glm_pois")
+nimbleMCMCconf$addSampler("beta",type="sampler_glm_pois", print = T)
 nimbleMCMCb <- buildMCMC(nimbleMCMCconf)
-nimbleMCMCc <- compileNimble(nimbleMCMCb)
-test_run <- runMCMC(nimbleMCMCc, niter = 500, nburnin = 100, thin = 1, nchains = 1, samplesAsCodaMCMC = TRUE)
-test_run[1,] # only returns NaNs :(
+nimbleMCMCc <- compileNimble(nimbleMCMCb, project = mod)
+test_run <- runMCMC(nimbleMCMCc, niter = 1000, nburnin = 500, thin = 1, nchains = 3, samplesAsCodaMCMC = TRUE)
+summary(test_run)# wrong answer :(
 ```
